app/src/main/java/com/example/askyoursenior/model/SharedPreferenceDb.java
package com.example.askyoursenior.model;

public class SharedPreferenceDb {
    public static final String DB_NAME = "USER_DATABASE";
    public static final String IS_LOGIN = "IS_LOGIN";
    public static final String USER_ID = "USER_ID";
    public static final String NAME = "USER_NAME";
    public static final String  ORGANIZATION_NAME= "USER_ORGANIZATION_NAME";

//    extra details
    public static final String  GITHUB_LINK = "USER_GITHUB_LINK";
    public static final String  LINKEDINID_LINK = "USER_LINKEDINID_LINK";
    public static final String PHONE_NUMBER = "USER_PHONE_NUMBER";

//    error
    public static final String NOT_FOUND_ERROR = "FATAL ERROR://NOT FOUND";



    public static final String NO_OF_BOOKS_UPLOADED = "NO_OF_BOOKS_UPLOADED";
}
